# immich-metadata-api

./: .dockerignore  .gitignore  Dockerfile  README.md  ai-disclosure.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  auth.py  config.py  db.py  main.py  queries.py  release.py
tests/: test_auth.py  test_config.py  test_integration.py  test_metadata.py  test_queries.py  test_release.py
