[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immich-metadata-api"
version = "0.0.0"
description = "Read-only REST API to search Immich asset_metadata, owner-scoped via an Immich API key"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "psycopg[binary]>=3.1",
  "psycopg-pool>=3.2",
  "httpx>=0.27",
  "pydantic>=2.7",
  "packaging>=23",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
